--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,10 +102,10 @@ jobs:
         run: >
           pytest
           --cov=gh_action_testing
-          --cov-report=html:artifacts/cov-report-${{ matrix.python-version }}
+          --cov-report=html:artifacts/cov-report-${{ runner.os }}-${{ matrix.python-version }}
           --cov-report=term
-          --html=artifacts/test-report-${{ matrix.python-version }}.html
-          --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+          --html=artifacts/test-report-${{ runner.os }}-${{ matrix.python-version }}.html
+          --junitxml=junit/test-results-${{ runner.os }}-${{ matrix.python-version }}.xml
           --self-contained-html
           tests/
 
@@ -120,6 +120,9 @@ jobs:
       - name: Upload pytest test results
         uses: actions/upload-artifact@v2
         with:
-          name: pytest-results-${{ matrix.python-version }}
-          path: junit/test-results-${{ matrix.python-version }}.xml
+          name: pytest-results-${{ runner.os }}-${{ matrix.python-version }}
+          path: |
+            artifacts/cov-report-${{ runner.os }}-${{ matrix.python-version }}
+            artifacts/test-report-${{ runner.os }}-${{ matrix.python-version }}.html
+            junit/test-results-${{ runner.os }}-${{ matrix.python-version }}.xml
         if: ${{ always() }}
