--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Setup Python
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.os }} ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
@@ -102,10 +102,10 @@ jobs:
         run: >
           pytest
           --cov=gh_action_testing
-          --cov-report=html:artifacts/cov-report-${{ runner.os }}-${{ matrix.python-version }}
+          --cov-report=html:artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
           --cov-report=term
-          --html=artifacts/test-report-${{ runner.os }}-${{ matrix.python-version }}.html
-          --junitxml=junit/test-results-${{ runner.os }}-${{ matrix.python-version }}.xml
+          --html=artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
+          --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
           --self-contained-html
           tests/
 
@@ -120,9 +120,9 @@ jobs:
       - name: Upload pytest test results
         uses: actions/upload-artifact@v2
         with:
-          name: pytest-results-${{ runner.os }}-${{ matrix.python-version }}
+          name: pytest-results-${{ matrix.os }}-${{ matrix.python-version }}
           path: |
-            artifacts/cov-report-${{ runner.os }}-${{ matrix.python-version }}
-            artifacts/test-report-${{ runner.os }}-${{ matrix.python-version }}.html
-            junit/test-results-${{ runner.os }}-${{ matrix.python-version }}.xml
+            artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
+            artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
+            junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
         if: ${{ always() }}
