--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,13 @@ on:
 
 jobs:
   pre-flight:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
+        poetry-version: ["latest"]
         python-version: ['3.10', '3.11']
+        os: [ubuntu-latest]
 
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
 
@@ -44,11 +46,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-${{ matrix.python-version }}
 
+      # Install poetry
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+
       # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[develop]
+          poetry install --with dev,test
 
       # Lint project using pre-commit config
       - name: Lint with pre-commit
@@ -95,7 +103,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[develop]
+          poetry install --with dev,test
 
       # Test package and save artifacts
       - name: Test with pytest
