--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,10 +47,12 @@ jobs:
             ${{ runner.os }}-pip-${{ matrix.python-version }}
 
       # Install poetry
-      - name: Run image
-        uses: abatilo/actions-poetry@v2
-        # with:
-        #   poetry-version: ${{ matrix.poetry-version }}
+      - name: Install Poetry
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install poetry
+          poetry shell
+          poetry install --with dev,test
 
       # Install dependencies
       - name: Install dependencies
