- github action testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,21 +51,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry
-          poetry shell
           poetry install --with dev,test
 
       # Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           poetry install --with dev,test
 
       # Lint project using pre-commit config
       - name: Lint with pre-commit
         run: |
-          pre-commit --version
-          pre-commit install
-          pre-commit run --all-files
+          poetry run pre-commit --version
+          poetry run pre-commit install
+          poetry run pre-commit run --all-files
         env:
           PRE_COMMIT_HOME: ${{ github.workspace }}/.cache/pre-commit-${{ matrix.python-version }}
 
