--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
   pre-flight:
     strategy:
       matrix:
-        # poetry-version: ["latest"]
         python-version: ['3.10', '3.11']
         os: [ubuntu-latest]
 
@@ -51,7 +50,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry
-          poetry install --with dev,test
 
       # Install dependencies
       - name: Install dependencies
@@ -99,16 +97,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-${{ matrix.python-version }}
 
+      # Install poetry
+      - name: Install Poetry
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install poetry
+
       # Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           poetry install --with dev,test
 
       # Test package and save artifacts
       - name: Test with pytest
         run: >
-          pytest
+          poetry run pytest
           --cov=gh_action_testing
           --cov-report=html:artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
           --cov-report=xml
