--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
+          cache: 'poetry'
           python-version: ${{ matrix.python-version }}
 
       # Cache pre-commit
@@ -31,25 +32,29 @@ jobs:
           key: pre-commit|${{ matrix.python-version }}|${{ hashFiles('.pre-commit-config.yaml') }}
 
       # Get pip directory
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
+      # - name: Get pip cache dir
+      #   id: pip-cache
+      #   run: |
+      #     echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
       # Cache pip directory
-      - name: pip cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-          restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.python-version }}
+      # - name: pip cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ${{ steps.pip-cache.outputs.dir }}
+      #     key: ${{ runner.os }}-pip-${{ matrix.python-version }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-${{ matrix.python-version }}
 
       # Install poetry
-      - name: Install Poetry
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
+      # - name: Install Poetry
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     python -m pip install poetry
+
+      # Install poetry
+      - name: Install poetry
+        run: pipx install poetry
 
       # Install dependencies
       - name: Install dependencies
@@ -81,28 +86,33 @@ jobs:
       - name: Set up Python ${{ matrix.os }} ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
+          cache: 'poetry'
           python-version: ${{ matrix.python-version }}
 
       # Get pip directory
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
+      # - name: Get pip cache dir
+      #   id: pip-cache
+      #   run: |
+      #     echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
       # Cache pip directory
-      - name: pip cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}
-          restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.python-version }}
+      # - name: pip cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ${{ steps.pip-cache.outputs.dir }}
+      #     key: ${{ runner.os }}-pip-${{ matrix.python-version }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-${{ matrix.python-version }}
 
       # Install poetry
-      - name: Install Poetry
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
+      # - name: Install Poetry
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     python -m pip install poetry
+
+      # Install poetry
+      - name: Install poetry
+        run: pipx install poetry
 
       # Install dependencies
       - name: Install dependencies
@@ -130,7 +140,7 @@ jobs:
 
       # Artifact upload
       - name: Upload pytest test results
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: pytest-results-${{ matrix.os }}-${{ matrix.python-version }}
           path: |
