--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,116 +1,134 @@
 name: build
 
 on:
-  push:
-    branches: [develop, main]
-  pull_request:
-    branches: [develop, main]
-  workflow_dispatch:
+    push:
+        branches: [develop, main]
+    pull_request:
+        branches: [develop, main]
+    workflow_dispatch:
 
 jobs:
-  pre-flight:
-    strategy:
-      matrix:
-        python-version: ['3.10', '3.11']
-        os: [ubuntu-latest]
+    pre-flight:
+        strategy:
+            matrix:
+                python-version: ['3.10', '3.11']
+                os: [ubuntu-latest]
 
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v3
+        runs-on: ${{ matrix.os }}
+        steps:
+            - uses: actions/checkout@v3
 
-      # Install poetry
-      - name: Install poetry
-        run: pipx install poetry
+            # Install poetry
+            - name: Install poetry
+              run: pipx install poetry
 
-      # Setup Python
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          cache: 'poetry'
-          python-version: ${{ matrix.python-version }}
+            # Setup Python
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v4
+              with:
+                  cache: 'poetry'
+                  python-version: ${{ matrix.python-version }}
 
-      # Cache pre-commit
-      - uses: actions/cache@v3
-        with:
-          path: ${{ github.workspace }}/.cache/pre-commit-${{ matrix.python-version }}
-          key: pre-commit|${{ matrix.python-version }}|${{ hashFiles('.pre-commit-config.yaml') }}
+            # Cache pre-commit
+            - uses: actions/cache@v3
+              with:
+                  path: ${{ github.workspace }}/.cache/pre-commit-${{ matrix.python-version }}
+                  key: pre-commit|${{ matrix.python-version }}|${{ hashFiles('.pre-commit-config.yaml') }}
 
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          poetry install --with dev,test
+            # Install dependencies
+            - name: Install dependencies
+              run: |
+                  poetry install --with dev,test
 
-      # Lint project using pre-commit config
-      - name: Lint with pre-commit
-        run: |
-          poetry run pre-commit --version
-          poetry run pre-commit install
-          poetry run pre-commit run --all-files
-        env:
-          PRE_COMMIT_HOME: ${{ github.workspace }}/.cache/pre-commit-${{ matrix.python-version }}
+            # Lint project using pre-commit config
+            - name: Lint with pre-commit
+              run: |
+                  poetry run pre-commit --version
+                  poetry run pre-commit install
+                  poetry run pre-commit run --all-files
+              env:
+                  PRE_COMMIT_HOME: ${{ github.workspace }}/.cache/pre-commit-${{ matrix.python-version }}
 
-  test:
-    needs: pre-flight
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest]
-        python-version: ['3.10', '3.11']
+    test:
+        needs: pre-flight
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                # os: [ubuntu-latest, macos-latest, windows-latest]
+                os: [ubuntu-latest]
+                python-version: ['3.10', '3.11']
 
-    services:
-      memcached:
-        image: memcached
-        ports:
-          - 11211/tcp
+        services:
+            memcached:
+                image: memcached
+                ports:
+                    - 11211/tcp
 
-    steps:
-      - uses: actions/checkout@v3
+        steps:
+            - uses: actions/checkout@v3
 
-      # Install poetry
-      - name: Install poetry
-        run: pipx install poetry
+            # Make sure you put workflow kit action on top of all the steps
+            - name: Collect Workflow Telemetry
+              uses: runforesight/foresight-workflow-kit-action@v1
+              if: ${{ always() }}
+              with:
+                  api_key: ac17018c-6154-411a-8674-1481ffa786ff
 
-      # Setup Python
-      - name: Set up Python ${{ matrix.os }} ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          cache: 'poetry'
-          python-version: ${{ matrix.python-version }}
+            # Install poetry
+            - name: Install poetry
+              run: pipx install poetry
 
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          poetry install --with dev,test
+            # Setup Python
+            - name: Set up Python ${{ matrix.os }} ${{ matrix.python-version }}
+              uses: actions/setup-python@v4
+              with:
+                  cache: 'poetry'
+                  python-version: ${{ matrix.python-version }}
 
-      # Test package and save artifacts
-      - name: Test with pytest
-        run: >
-          poetry run pytest
-          --cov=gh_action_testing
-          --cov-report=html:artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
-          --cov-report=xml
-          --html=artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
-          --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
-          --self-contained-html
-          tests/
+            # Install dependencies
+            - name: Install dependencies
+              run: |
+                  poetry install --with dev,test
 
-      # Upload file to codecov
-      - name: Upload to codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          # files: ./coverage1.xml,./coverage2.xml # optional
-          flags: pytest # optional
-          verbose: false # optional (default = false)
+            # Test package and save artifacts
+            - name: Test with pytest
+              run: >
+                  poetry run pytest
+                  --cov=gh_action_testing
+                  --cov-report=html:artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
+                  --cov-report=xml
+                  --html=artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
+                  --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
+                  --self-contained-html
+                  tests/
 
-      # Artifact upload
-      - name: Upload pytest test results
-        uses: actions/upload-artifact@v3
-        with:
-          name: pytest-results-${{ matrix.os }}-${{ matrix.python-version }}
-          path: |
-            artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
-            artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
-            junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
-        if: ${{ always() }}
+            - name: Analyze Test and/or Coverage Results
+              uses: runforesight/foresight-test-kit-action@v1
+              if: ${{ always() }}
+              with:
+                  api_key: ac17018c-6154-411a-8674-1481ffa786ff
+                  test_format: JUNIT
+                  test_framework: PYTEST
+                  test_path: artifacts
+                  coverage_format: JACOCO/XML
+                  coverage_path: artifacts
+
+            # Upload file to codecov
+            - name: Upload to codecov
+              uses: codecov/codecov-action@v3
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+                  # files: ./coverage1.xml,./coverage2.xml # optional
+                  flags: pytest # optional
+                  verbose: false # optional (default = false)
+
+            # Artifact upload
+            - name: Upload pytest test results
+              uses: actions/upload-artifact@v3
+              with:
+                  name: pytest-results-${{ matrix.os }}-${{ matrix.python-version }}
+                  path: |
+                      artifacts/cov-report-${{ matrix.os }}-${{ matrix.python-version }}
+                      artifacts/test-report-${{ matrix.os }}-${{ matrix.python-version }}.html
+                      junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
+              if: ${{ always() }}
