--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,7 +44,9 @@ repos:
       rev: 6.3.0
       hooks:
           - id: pydocstyle
-            additional_dependencies: ['toml']
+            additional_dependencies:
+                - 'toml'
+                - 'tomli'
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: 'v3.0.0-alpha.4'
       hooks:
